# Django_airbnb

./: README.md  pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/migrations/: 0001_initial.py
experiences/: models.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
history/22_11_14/: 2_OOP.py  2_OOP_WITH_PYTHON.md  3_inheritance.py  4_super.py  5_recap.py  README.md
history/22_11_15/: 2_5_dir.py  3_0_Run_Server.py  3_1_Migrations.py  3_2_Recap.py  3_3_Super_User.py  3_4_Framework_Library.py  3_5_Apps.py  4_0_models.py  4_1_migrations.py  4_2_recap.py
history/22_11_16/: 4_3_admin.py  4_4_documentation.py  5_0_introduction.py  5_1_custom_model.py  5_2_custom_field.py  5_3_defaults.py  5_4_custom_admin.py  5_5_foreign_keys.py
history/22_11_18/: 5_6_super_mega_recap.py  6_0_user_model.py  6_1_room_model.py
history/22_11_22/: 6_10_medias.py  6_2_many_to_many.py  6_3_recap.py  6_4_rooms_admin.py  6_5_experiences.py  6_9_bookings.py
history/22_11_23/: 7_0_introduction.py  7_1_filter_get_create_delete.py  7_2_querySets.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/migrations/: 0001_initial.py
rooms/: models.py
rooms/migrations/: 0001_initial.py  (+3 more)
users/: admin.py
(+4 files in other folders)
