[tool.poetry]
name = "django-airbnb"
version = "0.1.0"
description = ""
authors = ["ByeongHunKim <rkwhr912@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_airbnb"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
